# funq

./: README.rst
client/funq/: models.py
server/libFunq/: CMakeLists.txt  dragndropresponse.h  pick.cpp  player.cpp  player.h  shortcutresponse.h
tests-functionnal/funq-test-app/: CMakeLists.txt  widgets.h
